src/test/deca/context/valid/simple-declare-int.deca
// Description:
//    déclare un int
//
// Resultats:
//
//
// Historique:
//    cree le 06/01/2023

{
    int i;
}